--- a/src/index.html
+++ b/src/index.html
@@ -109,100 +109,6 @@
             >
           </div>
           <button class="btn"><img src="icons/User.svg" alt="user" /></button>
-          <div class="basket display-none">
-            <div class="border-bottom basket-count card">
-              <div class="basket__card layout-row-between">
-                <img src="images/Item1.png" alt="door" />
-                <div class="card__info">
-                  <p class="card__title">
-                    Браво-22 Snow Melinga / <br />Magic Fog
-                  </p>
-                  <p class="card__text">Межкомнатная дверь</p>
-                </div>
-                <div>
-                  <p class="card__title card-sum">300600</p>
-                  <div class="layout-row-between card__block_counter">
-                    <button class="btn layout-row decrement">
-                      <img src="icons/Minus.svg" alt="minus" />
-                    </button>
-                    <input type="text" class="quantity" value="1" />
-                    <button class="btn layout-row increment">
-                      <img src="icons/Plus.svg" alt="plus" />
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="border-bottom basket-count card">
-              <div class="basket__card layout-row-between">
-                <img src="images/Item2.png" alt="door" />
-                <div class="card__info">
-                  <p class="card__title">Браво-22 Snow Melinga</p>
-                  <p class="card__text">Межкомнатная дверь</p>
-                </div>
-                <div>
-                  <p class="card__title card-sum">18600</p>
-                  <div class="layout-row-between card__block_counter">
-                    <button class="btn layout-row decrement">
-                      <img src="icons/Minus.svg" alt="minus" />
-                    </button>
-                    <input type="text" class="quantity" value="1" />
-                    <button class="btn layout-row increment">
-                      <img src="icons/Plus.svg" alt="plus" />
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="border-bottom basket-count card">
-              <div class="basket__card layout-row-between">
-                <img src="images/Item2.png" alt="door" />
-                <div class="card__info">
-                  <p class="card__title">Браво-22 Snow Melinga</p>
-                  <p class="card__text">Межкомнатная дверь</p>
-                </div>
-                <div>
-                  <p class="card__title card-sum">18600</p>
-                  <div class="layout-row-between card__block_counter">
-                    <button class="btn layout-row decrement">
-                      <img src="icons/Minus.svg" alt="minus" />
-                    </button>
-                    <input type="text" class="quantity" value="1" />
-                    <button class="btn layout-row increment">
-                      <img src="icons/Plus.svg" alt="plus" />
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="border-bottom basket-count card">
-              <div class="basket__card layout-row-between">
-                <img src="images/Item1.png" alt="door" />
-                <div class="card__info">
-                  <p class="card__title">
-                    Браво-22 Snow Melinga / <br />Magic Fog
-                  </p>
-                  <p class="card__text">Межкомнатная дверь</p>
-                </div>
-                <div>
-                  <p class="card__title card-sum">300600</p>
-                  <div class="layout-row-between card__block_counter">
-                    <button class="btn layout-row decrement">
-                      <img src="icons/Minus.svg" alt="minus" />
-                    </button>
-                    <input type="text" class="quantity" value="1" />
-                    <button class="btn layout-row increment">
-                      <img src="icons/Plus.svg" alt="plus" />
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="basket__card">
-              <p>Сумма заказа: <span class="sum-all">33119</span> ₽</p>
-              <button class="btn btn-color">Перейти к оформлению →</button>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -215,7 +121,7 @@
         <button class="btn layout-column btn-icon">
           <img src="icons/Search.svg" alt="search" />Поиск
         </button>
-        <button class="btn layout-column btn-icon">
+        <button class="btn layout-column btn-icon popup-backet-btn-mob">
           <img src="icons/Basket.svg" alt="basket" />Корзина
         </button>
         <button class="btn layout-column btn-icon">
@@ -301,5 +207,99 @@
         </button>
       </div>
     </form>
+    <section class="basket display-none">
+      <div class="border-bottom basket-count card">
+        <div class="basket__card layout-row-between">
+          <img src="images/Item1.png" alt="door" />
+          <div class="card__info">
+            <p class="card__title">
+              Браво-22 Snow Melinga / <br />Magic Fog
+            </p>
+            <p class="card__text">Межкомнатная дверь</p>
+          </div>
+          <div>
+            <p class="card__title card-sum">300600</p>
+            <div class="layout-row-between card__block_counter">
+              <button class="btn layout-row decrement">
+                <img src="icons/Minus.svg" alt="minus" />
+              </button>
+              <input type="text" class="quantity" value="1" />
+              <button class="btn layout-row increment">
+                <img src="icons/Plus.svg" alt="plus" />
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="border-bottom basket-count card">
+        <div class="basket__card layout-row-between">
+          <img src="images/Item2.png" alt="door" />
+          <div class="card__info">
+            <p class="card__title">Браво-22 Snow Melinga</p>
+            <p class="card__text">Межкомнатная дверь</p>
+          </div>
+          <div>
+            <p class="card__title card-sum">18600</p>
+            <div class="layout-row-between card__block_counter">
+              <button class="btn layout-row decrement">
+                <img src="icons/Minus.svg" alt="minus" />
+              </button>
+              <input type="text" class="quantity" value="1" />
+              <button class="btn layout-row increment">
+                <img src="icons/Plus.svg" alt="plus" />
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="border-bottom basket-count card">
+        <div class="basket__card layout-row-between">
+          <img src="images/Item2.png" alt="door" />
+          <div class="card__info">
+            <p class="card__title">Браво-22 Snow Melinga</p>
+            <p class="card__text">Межкомнатная дверь</p>
+          </div>
+          <div>
+            <p class="card__title card-sum">18600</p>
+            <div class="layout-row-between card__block_counter">
+              <button class="btn layout-row decrement">
+                <img src="icons/Minus.svg" alt="minus" />
+              </button>
+              <input type="text" class="quantity" value="1" />
+              <button class="btn layout-row increment">
+                <img src="icons/Plus.svg" alt="plus" />
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="border-bottom basket-count card">
+        <div class="basket__card layout-row-between">
+          <img src="images/Item1.png" alt="door" />
+          <div class="card__info">
+            <p class="card__title">
+              Браво-22 Snow Melinga / <br />Magic Fog
+            </p>
+            <p class="card__text">Межкомнатная дверь</p>
+          </div>
+          <div>
+            <p class="card__title card-sum">300600</p>
+            <div class="layout-row-between card__block_counter">
+              <button class="btn layout-row decrement">
+                <img src="icons/Minus.svg" alt="minus" />
+              </button>
+              <input type="text" class="quantity" value="1" />
+              <button class="btn layout-row increment">
+                <img src="icons/Plus.svg" alt="plus" />
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="basket__card">
+        <p class="sum__text">Сумма заказа: <span class="sum-all">33119</span> ₽</p>
+        <button class="btn btn-color sum__btn">Перейти к оформлению →</button>
+      </div>
+    </section>
   </body>
 </html>
